# privacy-registry

./: .gitignore  .release-it.json  Anchor.toml  CHANGELOG.md  Cargo.toml  README.md  package.json  security.json
.agents/skills/herald-context/: SKILL.md
.agents/skills/security-audit/: SKILL.md
.github/workflows/: ci.yml  deploy-and-verify.yml  release.yml
docs/: ARCHITECTURE.md  SECURITY.md
programs/herald-privacy-registry/: Cargo.toml
programs/herald-privacy-registry/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/herald-privacy-registry/src/instructions/: deactivate_protocol.rs  delete_identity.rs  migrate_channels.rs  migrate_notification_key_space.rs  mod.rs  pay_subscription.rs  reactivate_protocol.rs  register_identity.rs  register_notification_key.rs  register_protocol.rs  register_sms.rs  register_telegram.rs  remove_channel.rs  renew_subscription.rs  reset_protocol_sends.rs  revoke_notification_key.rs  rotate_notification_key.rs  suspend_protocol.rs  update_channels.rs  update_identity.rs  update_tier.rs  withdraw_treasury.rs  write_receipt.rs
programs/herald-privacy-registry/src/state/: identity.rs  mod.rs  proof.rs  protocol.rs  receipt.rs  vault.rs
tests/: herald-privacy-registry.ts
