[workspace]
members = ["programs/*"]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token", "associated_token"] }
light-sdk = { version = "0.23.0", features = ["anchor"] }
spl-token = { version = "6.0", features = ["no-entrypoint"] }
blake3 = "=1.8.2"
sha2 = "0.10"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
