cargo-features = ["edition2024"]

[package]
name = "herald-privacy-registry"
version = "1.0.0"
description = "Herald Privacy Registry – encrypted identity, protocol registry, and ZK delivery receipts"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "herald_privacy_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
light-sdk = { version = "0.23.0", features = ["anchor"] }
blake3 = "=1.8.2"
sha2 = "0.10"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }
