[package]
name = "herald-privacy-registry"
version = "1.0.0"
description = "Herald Privacy Registry – encrypted identity, protocol registry, and ZK delivery receipts"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "herald_privacy_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
light-sdk = { workspace = true }
spl-token = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
solana-security-txt = "1.1.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }
